--- a/.github/workflows/cloud-run-action.yaml
+++ b/.github/workflows/cloud-run-action.yaml
@@ -9,9 +9,9 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
-      - id: auth
+      - name: Auth
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
